rocketman/fix: overflow:hidden removed

--- a/game/index.css
+++ b/game/index.css
@@ -18,7 +18,6 @@ body {
     font-family: "Awesome North Korea", sans-serif;  
     font-weight: normal;
     font-style: normal;
-    overflow: hidden;
 }
 .wrapper {
     min-height: 100%;
